goit-markup-hw-07
Розбиває styles.css на окремі файли

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
 <!--Шапка сайту-->
@@ -92,7 +92,7 @@
         </ul></div>
       </section>
 <!--Чим ми займаємося-->
-      <section class="section worklist-section">
+      <section class="worklist-section">
         <div class="container"><h2 class="worklist-title">Чим ми займаємося</h2>
         <ul class="worklist list">
           <li>
