--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,27 @@
     <!--Шапка сайту-->
     <header class="header">
       <nav class="container main-nav">
-        <a href="./index.html" class="logoheader"><span class="logoweb">Web</span>Studio</a>
-        <ul class="site-nav list">
-          <li class="item">
-            <a href="./index.html" class="link">Студія</a>
+        <a href="./index.html" class="header__logo"><span class="header__logo_text">Web</span>Studio</a>
+        <ul class="header__site-nav list">
+          <li class="header__site-nav_item">
+            <a href="./index.html" class="site-nav_link">Студія</a>
           </li>
-          <li class="item">
-            <a href="./portfolio.html" class="link current">Портфоліо</a>
+          <li class="header__site-nav_item">
+            <a href="./portfolio.html" class="site-nav_link current">Портфоліо</a>
           </li>
-          <li class="item">
-            <a href="#" class="link">Контакти</a>
+          <li class="header__site-nav_item">
+            <a href="#" class="site-nav_link">Контакти</a>
           </li>
         </ul>
-        <ul class="nav-contacts list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link contacts">
-              <svg class="contact-icons" width="16px" height="12px">
+        <ul class="header__contacts list">
+          <li class="header__contacts_item">
+            <a href="mailto:info@devstudio.com" class="contacts_link contacts">
+              <svg class="header__contacts_icons" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>info@devstudio.com</a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link contacts"><svg class="contact-icons" width="12px" height="16px">
+          <li class="header__contacts_item">
+            <a href="tel:+380961111111" class="contacts_link contacts"><svg class="header__contacts_icons" width="12" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11</a>
           </li>
@@ -44,79 +44,79 @@
     <!--Портфоліо-->
     <section class="section"><h1 class="visually-hidden">Приклади наших робіт</h1>
     <!--Меню портфоліо-->
-    <div class="container"><ul class="portfolio-btn list">
-      <li><button type="button" class="button button-portfolio">Усі</button></li>
-      <li><button type="button" class="button button-portfolio">Веб-сайти</button></li>
-      <li><button type="button" class="button button-portfolio">Додатки</button></li>
-      <li><button type="button" class="button button-portfolio">Дизайн</button></li>
-      <li><button type="button" class="button button-portfolio">Маркетинг</button></li>
+    <div class="container"><ul class="portfolio__btn list">
+      <li><button type="button" class="button button__portfolio">Усі</button></li>
+      <li><button type="button" class="button button__portfolio">Веб-сайти</button></li>
+      <li><button type="button" class="button button__portfolio">Додатки</button></li>
+      <li><button type="button" class="button button__portfolio">Дизайн</button></li>
+      <li><button type="button" class="button button__portfolio">Маркетинг</button></li>
   </ul>
-  <ul class="portfolio-list list">
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/technocrack.jpg" width="370" alt="веб-сайт Технокряк">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Технокряк</h2>
-        <p class="portfolio-text">Веб-сайт</p></a></div>
-      </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/poster-neworlean.jpg" width="370" alt="дизайн Постера New Orlean">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-text">Дизайн</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img  class="portfolio-img"
-          src="./images/rest-seafood.jpg" width="370" alt="додаток для Ресторану Seafood">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p class="portfolio-text">Додаток</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/project-prime.jpg" width="370" alt="маркетингковий проєкт Prime">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-            <div class="border"><h2 class="portfolio-title">Проєкт Prime</h2>
-            <p class="portfolio-text">Маркетинг</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/project-boxes.jpg" width="370" alt="додаток Проєкт Boxes">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Проєкт Boxes</h2>
-            <p class="portfolio-text">Додаток</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/web-ispiration.jpg" width="370" alt="веб-сайт Inspiration has no Borders">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p class="portfolio-text">Веб-сайт</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/design-limedit.jpg" width="370" alt="Видання Limited Edition">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Видання Limited Edition</h2>
-            <p class="portfolio-text">Дизайн</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/project-lab.jpg" width="370" alt="маркетинговий проєкт LAB">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Проєкт LAB</h2>
-            <p class="portfolio-text">Маркетинг</p></div></a>
-        </li>
-        <li class="card"><div class="image-wrapper"><a href="#" class="portfolio-link"><img class="portfolio-img"
-          src="./images/app-growbussiness.jpg" width="370" alt="додаток Growing Business">
-          <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
-          <div class="border"><h2 class="portfolio-title">Growing Business</h2>
-            <p class="portfolio-text">Додаток</p></div></a>
-        </li>
-    </ul></div>
+  <ul class="portfolio__list list">
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/technocrack.jpg" width="370" alt="веб-сайт Технокряк">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Технокряк</h2>
+    <p class="portfolio__text">Веб-сайт</p></a></div>
+  </li>
+   <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/poster-neworlean.jpg" width="370" alt="дизайн Постера New Orlean">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Постер New Orlean vs Golden Star</h2>
+        <p class="portfolio__text">Дизайн</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/rest-seafood.jpg" width="370" alt="додаток для Ресторану Seafood">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Ресторан Seafood</h2>
+        <p class="portfolio__text">Додаток</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/project-prime.jpg" width="370" alt="маркетингковий проєкт Prime">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Проєкт Prime</h2>
+        <p class="portfolio__text">Маркетинг</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/project-boxes.jpg" width="370" alt="додаток Проєкт Boxes">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Проєкт Boxes</h2>
+        <p class="portfolio__text">Додаток</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/web-ispiration.jpg" width="370" alt="веб-сайт Inspiration has no Borders">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Inspiration has no Borders</h2>
+        <p class="portfolio__text">Веб-сайт</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/design-limedit.jpg" width="370" alt="Видання Limited Edition">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Видання Limited Edition</h2>
+        <p class="portfolio__text">Дизайн</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/project-lab.jpg" width="370" alt="маркетинговий проєкт LAB">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Проєкт LAB</h2>
+        <p class="portfolio__text">Маркетинг</p></div></a>
+    </li>
+    <li class="portfolio__card"><div class="portfolio__image_wrapper"><a href="#" class="portfolio__link"><img class="portfolio__img"
+      src="./images/app-growbussiness.jpg" width="370" alt="додаток Growing Business">
+      <div class="overlay"><p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div></div>
+      <div class="portfolio__border"><h2 class="portfolio__title">Growing Business</h2>
+        <p class="portfolio__text">Додаток</p></div></a>
+    </li>
+</ul></div>
 </section>
-    </main>
+</main>
 <!--Футер сайту-->
 <footer class="footer">
   <div class="container">
-  <div class="footer-block">
-  <div class="main-block">
-    <a href="./index.html" class="address logofooter"><span class="logoweb">Web</span>Studio</a>
+  <div class="footer__block">
+  <div class="footer__block_main">
+    <a href="./index.html" class="footer__address footer__logo"><span class="footer__logo_text">Web</span>Studio</a>
   <address>
-    <ul class="footer-nav list">
+    <ul class="footer__nav list">
       <li>
         <a
           href="https://goo.gl/maps/ZicWZSvamPS7MqvVA"
@@ -127,46 +127,46 @@
         >
       </li>
       <li>
-        <a href="mailto:info@devstudio.com" class="address-mail link">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="footer__address_mail link">info@devstudio.com</a>
       </li>
       <li>
-        <a href="tel:+380961111111" class="address-tel link">+38 096 111 11 11</a>
+        <a href="tel:+380961111111" class="footer__address_tel link">+38 096 111 11 11</a>
       </li>
     </ul>
   </address></div>
 <!-- Соціальні мережі -->
-  <div class="social-block">
-    <h2 class="joinus-title">Приєднуйтесь</h2>
-    <ul class="joinus-media list">
+<div class="social-block">
+  <h2 class="joinus-title">Приєднуйтесь</h2>
+  <ul class="joinus-media list">
+  <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+    <use href="./images/icons.svg#icon-instagram"></use>
+    </svg></a></li>
     <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
-      <use href="./images/icons.svg#icon-instagram"></use>
-      </svg></a></li>
-      <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
-      <use href="./images/icons.svg#icon-twitter"></use>
-      </svg></a></li>
-      <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
-      <use href="./images/icons.svg#icon-facebook"></use>
-      </svg></a></li>
-      <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
-      <use href="./images/icons.svg#icon-linkedin"></use>
-      </svg></a></li>
-  </ul></div>
+    <use href="./images/icons.svg#icon-twitter"></use>
+    </svg></a></li>
+    <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+    <use href="./images/icons.svg#icon-facebook"></use>
+    </svg></a></li>
+    <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+    <use href="./images/icons.svg#icon-linkedin"></use>
+    </svg></a></li>
+</ul></div>
 <!-- Підписка на розсилку -->
-  <div class="subscribe">
-    <b class="subscribe-title">Підпишіться на розсилку</b>
-    <div class="subscribe-form">
-    <label for="subscribe"></label>
-      <input name="subscribe"
-      name="subscribe"
-      id="subscribe"
-      type="email"
-      class="subscribe-input"
-      placeholder="E-mail"
-      />
-    <button type="submit" class="subscribe-button">Підпиcатися<svg class="subscribe-icon" width="24" height="24"><use href="./images/icons.svg#icon-subscribe"></use></button>
-  </div>
-</div>
-</footer>
+      <div class="subscribe">
+        <b class="subscribe-title">Підпишіться на розсилку</b>
+        <div class="subscribe-form">
+        <label for="subscribe"></label>
+          <input name="subscribe"
+          name="subscribe"
+          id="subscribe"
+          type="email"
+          class="subscribe-input"
+          placeholder="E-mail"
+          />
+        <button type="submit" class="subscribe-button">Підпиcатися<svg class="subscribe-icon" width="24" height="24"><use href="./images/icons.svg#icon-subscribe"></use></button>
+      </div>
+    </div>
+    </footer>
       <!--Модальне вікно-->
           <div class="backdrop is-hidden" data-modal>
             <div class="modal"><button data-modal-close class="close-button"><svg width="11" height="11">
