goit-markup-hw-07
Виправлення допрацювань від 06.12.2022

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
       <li>
         <a
           href="https://goo.gl/maps/ZicWZSvamPS7MqvVA"
-          class="address-text link"
+          class="footer__address_text link"
           target="_blank"
           rel="noopener noreferrer"
           >м. Київ, пр-т Лесі Українки, 26</a
@@ -135,37 +135,37 @@
     </ul>
   </address></div>
 <!-- Соціальні мережі -->
-<div class="social-block">
-  <h2 class="joinus-title">Приєднуйтесь</h2>
-  <ul class="joinus-media list">
-  <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+<div class="footer__social_block">
+  <h2 class="joinus__title">Приєднуйтесь</h2>
+  <ul class="joinus__media list">
+  <li class="joinus__social_item"><a href="#" class="joinus__social_link"><svg class="joinus__social_icon" width="20" height="20">
     <use href="./images/icons.svg#icon-instagram"></use>
     </svg></a></li>
-    <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+    <li class="joinus__social_item"><a href="#" class="joinus__social_link"><svg class="joinus__social_icon" width="20" height="20">
     <use href="./images/icons.svg#icon-twitter"></use>
     </svg></a></li>
-    <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+    <li class="joinus__social_item"><a href="#" class="joinus__social_link"><svg class="joinus__social_icon" width="20" height="20">
     <use href="./images/icons.svg#icon-facebook"></use>
     </svg></a></li>
-    <li class="joinus social-item"><a href="#" class="joinus social-link"><svg class="joinus social-icon" width="20" height="20">
+    <li class="joinus__social_item"><a href="#" class="joinus__social_link"><svg class="joinus__social_icon" width="20" height="20">
     <use href="./images/icons.svg#icon-linkedin"></use>
     </svg></a></li>
 </ul></div>
 <!-- Підписка на розсилку -->
-      <div class="subscribe">
-        <b class="subscribe-title">Підпишіться на розсилку</b>
-        <div class="subscribe-form">
-        <label for="subscribe"></label>
-          <input name="subscribe"
-          name="subscribe"
-          id="subscribe"
-          type="email"
-          class="subscribe-input"
-          placeholder="E-mail"
-          />
-        <button type="submit" class="subscribe-button">Підпиcатися<svg class="subscribe-icon" width="24" height="24"><use href="./images/icons.svg#icon-subscribe"></use></button>
-      </div>
-    </div>
+<div class="subscribe">
+  <b class="subscribe__title">Підпишіться на розсилку</b>
+  <div class="subscribe__form">
+  <label for="subscribe"></label>
+    <input name="subscribe"
+    name="subscribe"
+    id="subscribe"
+    type="email"
+    class="subscribe__input"
+    placeholder="E-mail"
+    />
+  <button type="submit" class="subscribe__button">Підпиcатися<svg class="subscribe__icon" width="24" height="24"><use href="./images/icons.svg#icon-subscribe"></use></button>
+</div>
+</div>
     </footer>
       <!--Модальне вікно-->
           <div class="backdrop is-hidden" data-modal>
